# Variant

./: .variant.h.swp  CMakeLists.txt  main.cpp  temp_variant.h  tst_adf.h  variant.h
